@@ -29,6 +29,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       which should be larger than the max for hostnames)
   e - added qmgr option accounting_keep_days, specifies how long to keep
       accounting files.
+  e - changed mom config varattr so invoked script returns the varattr name
+      and value(s)
 
 2.4.0
   f - added a "-q" option to pbs_mom which does *not* perform the default -p 
